--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PH-TUBE</title>
+
+    <!-- DaisyUi CDN -->
+     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.19/dist/full.min.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="style.css">
+<!-- Google Font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<!-- Google Font Ends-->
+<style>
+    .font-inter {
+  font-family: "Inter", sans-serif;
+  
+}
+</style>
 </head>
-<body>
-    
+<body class="font-inter">
+  <!-- Header Part Starts -->
+   <header class="md:container mx-auto ">
+    <nav class="flex justify-between items-center">
+        <div class="logo">
+            <img src="assets/Logo.png" alt="">
+        </div>
+        <div class="search">
+            <label class="input input-bordered flex items-center gap-2">
+                <input type="text" class="grow" placeholder="Search" />
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  class="h-4 w-4 opacity-70">
+                  <path
+                    fill-rule="evenodd"
+                    d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                    clip-rule="evenodd" />
+                </svg>
+              </label>
+        </div>
+        <div class="sort">
+            <button class="btn btn-lg bg-red-500">Blog</button>
+        </div>
+    </nav>
+    <hr>
+   </header>
+ 
 </body>
 </html>
