--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 </head>
 <body class="font-inter">
   <!-- Header Part Starts -->
-   <header class="md:container mx-auto ">
-    <nav class="flex justify-between items-center">
+   <!-- md:container mx-auto -->
+   <header class=" ">
+    <nav class="flex justify-between items-center w-11/12 mx-auto py-5">
         <div class="logo">
             <img src="assets/Logo.png" alt="">
         </div>
