button fetched from API & shown in UI

--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
     </nav>
     <hr>
    </header>
- 
+ <nav id="categories" class="py-5 flex justify-center   gap-14 ">
 
+ </nav>
+<!-- For Practice-Same Work -->
+<nav id="categoryGhoreAni" class="flex justify-center gap-14">
 
+</nav>
    <script src="js/video.js"></script>
+   <script src="js/video2.js"></script>
 </body>
 </html>
