working on p-tube

--- a/index.html
+++ b/index.html
@@ -53,11 +53,18 @@
  <nav id="categories" class="py-5 flex justify-center   gap-14 ">
 
  </nav>
-<!-- For Practice-Same Work -->
-<nav id="categoryGhoreAni" class="flex justify-center gap-14">
+<main>
+    <section id="videos" class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10">
 
-</nav>
+    </section>
+</main>
+
+
+
    <script src="js/video.js"></script>
-   <script src="js/video2.js"></script>
+
+
+
+  <!--  <script src="js/video2.js"></script> -->
 </body>
 </html>
